# bwtpy

./: .gitattributes  README.md  pyproject.toml  requirements.txt
lib/: bwa.py  bwt.py  utils.py
tests/: test_bwa.py  test_bwt.py
tests/data/: final_bwt.pkl  rotations.pkl  sorted_array.pkl
