[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bwt_exp"
version = "0.0.1"
authors = [
    { name="Theodore Markulin", email="theodore.markulin@gmail.com"}
]
requires-python = ">=3.10.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
